web-api-gw.yaml
#web-api-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: web-api-gateway
spec:
  selector:
    gw: partner-igw-1-16-7 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "hellocloud.io"
